[gd_scene load_steps=10 format=4 uid="uid://drmiw8rcswdmk"]

[ext_resource type="Script" uid="uid://dv6gx6xpgvqa8" path="res://scenes/levels/level.gd" id="1_377w7"]
[ext_resource type="TileSet" uid="uid://dbikexer73o6m" path="res://resources/CollisionWallTileset.tres" id="2_mbbpy"]
[ext_resource type="Material" uid="uid://cmbcfxlkxxnwq" path="res://addons/TileMapDual/ghost_material.tres" id="3_ouxo3"]
[ext_resource type="Script" uid="uid://cjk8nronimk5r" path="res://addons/TileMapDual/TileMapDual.gd" id="4_icy5c"]
[ext_resource type="TileSet" uid="uid://bimvu5ux2vbbg" path="res://resources/GroundLayerDualTileset.tres" id="4_rmjfq"]
[ext_resource type="PackedScene" uid="uid://bpu7qmyyp6op8" path="res://scenes/utility/aoe_texture_replacer.tscn" id="5_rmjfq"]
[ext_resource type="PackedScene" uid="uid://qxbajo21gg4j" path="res://scenes/hero.tscn" id="6_7pb6i"]
[ext_resource type="TileSet" uid="uid://cr0hi6knok7ks" path="res://resources/RockWallsDualTileset.tres" id="6_xfk5q"]
[ext_resource type="PackedScene" uid="uid://6v2n4wq0htmf" path="res://scenes/utility/text_overlay.tscn" id="7_xfk5q"]

[node name="Level" type="Node2D"]
script = ExtResource("1_377w7")

[node name="TileMapLayers" type="Node" parent="."]

[node name="CollisionWallLayer" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAJAAEAAAABAAAAAAAJAAIAAAABAAAAAAAJAAMAAAABAAAAAAAJAAQAAAABAAAAAAAJAAUAAAABAAAAAAABAAUAAAABAAAAAAACAAUAAAABAAAAAAADAAUAAAABAAAAAAAEAAUAAAABAAAAAAAFAAUAAAABAAAAAAAGAAUAAAABAAAAAAAHAAUAAAABAAAAAAAIAAUAAAABAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAAQAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAABAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAIAAAABAAAAAAAIAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAABAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAA=")
tile_set = ExtResource("2_mbbpy")

[node name="GroundLayerDual" type="TileMapLayer" parent="TileMapLayers"]
material = ExtResource("3_ouxo3")
tile_map_data = PackedByteArray("AAABAAEAAAAAAAMAAAABAAIAAAAAAAMAAAABAAMAAAAAAAMAAAABAAQAAAACAAEAAAACAAQAAAACAAEAAAADAAQAAAAAAAMAAAAEAAQAAAACAAEAAAAEAAMAAAACAAEAAAAEAAIAAAACAAEAAAAEAAEAAAAAAAMAAAADAAEAAAAAAAMAAAADAAIAAAAAAAMAAAACAAIAAAAAAAMAAAAFAAEAAAAAAAMAAAAGAAEAAAACAAEAAAAHAAEAAAACAAEAAAAIAAEAAAACAAEAAAAIAAIAAAAAAAMAAAAIAAMAAAAAAAMAAAAIAAQAAAACAAEAAAAHAAQAAAAAAAMAAAAGAAQAAAAAAAMAAAAGAAMAAAAAAAMAAAACAAMAAAACAAEAAAAFAAIAAAACAAEAAAAFAAMAAAACAAEAAAAGAAAAAAACAAEAAAAIAAAAAAACAAEAAAA=")
tile_set = ExtResource("4_rmjfq")
script = ExtResource("4_icy5c")
godot_4_3_compatibility = false
metadata/_custom_type_script = "uid://cjk8nronimk5r"

[node name="RockWallsDual" type="TileMapLayer" parent="TileMapLayers"]
material = ExtResource("3_ouxo3")
tile_map_data = PackedByteArray("AAAAAAAAAAACAAEAAAABAAAAAAACAAEAAAACAAAAAAACAAEAAAADAAAAAAACAAEAAAAEAAAAAAACAAEAAAAFAAAAAAACAAEAAAAGAAAAAAACAAEAAAAHAAAAAAACAAEAAAAIAAAAAAACAAEAAAAJAAAAAAACAAEAAAAJAAEAAAACAAEAAAAJAAIAAAACAAEAAAAJAAMAAAACAAEAAAAJAAQAAAACAAEAAAAJAAUAAAACAAEAAAAIAAUAAAACAAEAAAAHAAUAAAACAAEAAAAGAAUAAAACAAEAAAAFAAUAAAACAAEAAAAEAAUAAAACAAEAAAADAAUAAAACAAEAAAACAAUAAAACAAEAAAABAAUAAAACAAEAAAAAAAUAAAACAAEAAAAAAAQAAAACAAEAAAAAAAMAAAACAAEAAAAAAAIAAAACAAEAAAAAAAEAAAACAAEAAAAFAAMAAAACAAEAAAAFAAQAAAACAAEAAAAIAAIAAAACAAEAAAA=")
tile_set = ExtResource("6_xfk5q")
script = ExtResource("4_icy5c")
godot_4_3_compatibility = false
metadata/_custom_type_script = "uid://cjk8nronimk5r"

[node name="AOEs" type="Node" parent="."]

[node name="AoeTextureReplacer" parent="." instance=ExtResource("5_rmjfq")]

[node name="Enemies" type="Node" parent="."]

[node name="Hero" parent="." instance=ExtResource("6_7pb6i")]
position = Vector2(302, 544)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextOverlay" parent="CanvasLayer" instance=ExtResource("7_xfk5q")]

[node name="IntroTextTimer" type="Timer" parent="CanvasLayer/TextOverlay"]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="CanvasLayer/TextOverlay/IntroTextTimer" to="." method="_on_intro_text_timer_timeout"]
