[gd_scene load_steps=12 format=4 uid="uid://ceoxogknad0np"]

[ext_resource type="Script" uid="uid://dv6gx6xpgvqa8" path="res://scenes/levels/level.gd" id="1_dywbp"]
[ext_resource type="TileSet" uid="uid://d25t2rrj02qel" path="res://resources/dark_rock_tile_set.res" id="2_6sh32"]
[ext_resource type="TileSet" uid="uid://r8yy5teapt5r" path="res://resources/15TilesDarkRockTileSet.tres" id="3_2r1tl"]
[ext_resource type="PackedScene" uid="uid://dx5hkxw8veil" path="res://scenes/aoes/lava_aoe.tscn" id="3_ejswk"]
[ext_resource type="TileSet" uid="uid://s37sss0ybk8g" path="res://resources/15GrayWallTiles.tres" id="4_2r1tl"]
[ext_resource type="PackedScene" uid="uid://d1mr1jwoop6vc" path="res://scenes/enemies/lava_ant.tscn" id="4_bbk5w"]
[ext_resource type="PackedScene" uid="uid://0tmqep1h7h4g" path="res://scenes/enemies/splitting_enemy.tscn" id="5_1seuy"]
[ext_resource type="PackedScene" uid="uid://qxbajo21gg4j" path="res://scenes/hero.tscn" id="5_conm7"]
[ext_resource type="PackedScene" uid="uid://rcwk8083hdh4" path="res://scenes/collectables/crystal.tscn" id="9_5ntmo"]
[ext_resource type="PackedScene" uid="uid://c6ts2hfff11hw" path="res://scenes/enemies/acid_slug.tscn" id="10_5ntmo"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_5ntmo"]
vertices = PackedVector2Array(2834.17, 1123.44, 2527.66, 1122.88, 2527.69, 1122.88, 1511.05, 85.9063, 2915.59, -761.406, 3137, -761.008, 3137, 1123.98, 2279.04, 1121.58, 2075.37, 1120.5, 2261.8, -762.594, 2594.06, -761.992, 1507.95, -483.883, 1976.71, -763.102, 1659.45, -763.672, 1282.18, -764.352, 1488.3, -484.117, 879.18, -765.078, 1485, -375.078, 710.258, -439, 682.227, -543.633, 463.344, -765.82, 605.633, -620.227, 501, -648.258, 1789.99, 1119, 1491.13, 86.0938, 1477.22, 1120.99, 1177.18, 1120.45, 396.367, -620.227, 66.7734, -766.531, 319.773, -543.633, -226.859, 1117.93, -492.68, 1117.45, -734.023, 1117.01, -734.727, 850.133, 319.773, -334.367, 396.367, -257.773, 43.2266, 1118.41, -734.828, -200.328, -742, -500.242, -739.102, -767.977, -364.102, -767.297, 291.742, -439, 682.227, -334.367, 605.633, -257.773, 919.969, 1119.99, 649.883, 1119.51, 501, -229.742, 347.594, 1118.96, -735.453, 577.891, -736.133, 318.672, -733, 53.0234)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5, 6, 0, 2, 7, 8), PackedInt32Array(9, 10, 4, 3, 11, 12), PackedInt32Array(13, 12, 11), PackedInt32Array(14, 13, 11, 15), PackedInt32Array(16, 14, 15, 17, 18, 19), PackedInt32Array(20, 16, 19, 21), PackedInt32Array(20, 21, 22), PackedInt32Array(3, 8, 23), PackedInt32Array(24, 3, 23, 25, 26), PackedInt32Array(20, 22, 27, 28), PackedInt32Array(28, 27, 29), PackedInt32Array(30, 31, 32, 33, 34, 35, 36), PackedInt32Array(37, 38, 39, 40, 41, 34), PackedInt32Array(42, 18, 17, 24, 26), PackedInt32Array(43, 42, 26, 44, 45), PackedInt32Array(46, 43, 45, 47, 36), PackedInt32Array(35, 46, 36), PackedInt32Array(34, 33, 48, 49, 50), PackedInt32Array(34, 50, 37), PackedInt32Array(41, 40, 28, 29)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-749, -778, -752, -500, -744.828, -200.176, -743, 53, -746.122, 318.553, -745.441, 577.92, -744.727, 850.165, -744, 1127, -492.704, 1127.45, -226.88, 1127.93, 43.2111, 1128.42, 347.573, 1128.96, 649.856, 1129.51, 919.948, 1129.99, 1177.17, 1130.46, 1477.27, 1131, 1790, 1129, 2075.32, 1130.5, 2278.99, 1131.58, 2527.64, 1132.89, 2834.15, 1133.44, 3147, 1134, 3147, 807.302, 3147, 483.62, 3147, 217.815, 3147, -28.6981, 3147, -320.226, 3147, -575.313, 3147, -771, 2915.61, -771.416, 2594.08, -771.993, 2261.82, -772.59, 1976.73, -773.103, 1659.47, -773.673, 1282.2, -774.35, 879.203, -775.075, 463.359, -775.822, 66.7891, -776.534, -364.075, -777.308), PackedVector2Array(1501, 76, 1495, -375, 1498, -474)])

[node name="Level1" type="Node2D"]
script = ExtResource("1_dywbp")

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="CollisionWallLayer" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAD8//z/AAAAAAIAAAD8//3/AAAAAAIAAAD8////AAAAAAEAAAD8/wAAAAAAAAEAAAD8/wMAAAAAAAEAAAD8/wQAAAAAAAEAAAD8/wYAAAAAAAEAAAD9//z/AAAAAAEAAAD9//3/AAAAAAIAAAD9//7/AAAAAAMAAAD9////AAAAAAIAAAD9/wMAAAAAAAIAAAD9/wQAAAAAAAEAAAD9/wUAAAAAAAEAAAD9/wYAAAAAAAEAAAD+//z/AAAAAAIAAAD+//7/AAAAAAMAAAD+////AAAAAAEAAAD+/wAAAAAAAAEAAAD+/wIAAAAAAAIAAAD+/wMAAAAAAAIAAAD+/wUAAAAAAAEAAAD+/wYAAAAAAAEAAAD///z/AAAAAAEAAAD///3/AAAAAAEAAAD///7/AAAAAAMAAAD/////AAAAAAEAAAD//wIAAAAAAAIAAAD//wMAAAAAAAIAAAD//wQAAAAAAAEAAAD//wYAAAAAAAIAAAAAAP3/AAAAAAEAAAAAAP//AAAAAAEAAAAAAAQAAAAAAAMAAAAAAAUAAAAAAAEAAAABAP//AAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAAAAAIAAAABAAUAAAAAAAEAAAABAAYAAAAAAAIAAAACAPz/AAAAAAIAAAACAP7/AAAAAAEAAAACAP//AAAAAAIAAAACAAIAAAAAAAEAAAACAAMAAAAAAAEAAAACAAUAAAAAAAEAAAADAPz/AAAAAAIAAAADAP3/AAAAAAIAAAADAP//AAAAAAIAAAADAAEAAAAAAAEAAAADAAIAAAAAAAEAAAADAAMAAAAAAAIAAAADAAQAAAAAAAEAAAADAAUAAAAAAAEAAAADAAYAAAAAAAEAAAAEAP3/AAAAAAIAAAAEAP7/AAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAAAAAIAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAEAAAAEAAYAAAAAAAEAAAAFAPz/AAAAAAIAAAAFAP7/AAAAAAMAAAAFAAEAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAEAAAAGAP3/AAAAAAMAAAAGAP7/AAAAAAIAAAAGAP//AAAAAAIAAAAGAAEAAAAAAAEAAAAGAAIAAAAAAAIAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAIAAAAHAPz/AAAAAAEAAAAHAP7/AAAAAAIAAAAHAP//AAAAAAIAAAAHAAAAAAAAAAMAAAAHAAIAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAIAAAAHAAYAAAAAAAEAAAAIAPz/AAAAAAEAAAAIAP3/AAAAAAMAAAAIAP7/AAAAAAEAAAAIAP//AAAAAAEAAAAIAAAAAAAAAAMAAAAIAAEAAAAAAAIAAAAIAAIAAAAAAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAIAAAAIAAYAAAAAAAEAAAAJAPz/AAAAAAEAAAAJAP3/AAAAAAMAAAAJAP7/AAAAAAIAAAAJAP//AAAAAAEAAAAJAAAAAAAAAAMAAAAJAAIAAAAAAAIAAAAJAAMAAAAAAAIAAAAJAAUAAAAAAAEAAAAJAAYAAAAAAAEAAAAKAPz/AAAAAAEAAAAKAP7/AAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAIAAAAKAAYAAAAAAAEAAAALAPz/AAAAAAEAAAALAP7/AAAAAAEAAAALAP//AAAAAAEAAAALAAAAAAAAAAIAAAALAAEAAAAAAAIAAAALAAIAAAAAAAIAAAALAAMAAAAAAAIAAAALAAQAAAAAAAIAAAALAAYAAAAAAAEAAAD8//7/AAAAAAEAAAD8/wEAAAAAAAEAAAD8/wIAAAAAAAIAAAD8/wUAAAAAAAEAAAD9/wAAAAAAAAEAAAD9/wEAAAAAAAEAAAD9/wIAAAAAAAEAAAD+//3/AAAAAAEAAAD+/wEAAAAAAAEAAAD+/wQAAAAAAAMAAAD//wAAAAAAAAEAAAD//wEAAAAAAAEAAAD//wUAAAAAAAEAAAAAAPz/AAAAAAEAAAAAAP7/AAAAAAIAAAAAAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAIAAAAAAAYAAAAAAAEAAAABAPz/AAAAAAEAAAABAP3/AAAAAAEAAAABAP7/AAAAAAEAAAABAAIAAAAAAAIAAAABAAMAAAAAAAEAAAABAAQAAAAAAAIAAAACAAEAAAAAAAEAAAACAAQAAAAAAAEAAAACAAYAAAAAAAEAAAADAP7/AAAAAAIAAAADAAAAAAAAAAEAAAAEAPz/AAAAAAEAAAAEAP//AAAAAAEAAAAEAAIAAAAAAAEAAAAFAP3/AAAAAAMAAAAFAP//AAAAAAMAAAAFAAAAAAAAAAMAAAAFAAUAAAAAAAEAAAAFAAYAAAAAAAEAAAAGAPz/AAAAAAEAAAAGAAAAAAAAAAMAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAHAP3/AAAAAAMAAAAHAAEAAAAAAAEAAAAHAAMAAAAAAAEAAAAIAAUAAAAAAAEAAAAJAAEAAAAAAAEAAAAJAAQAAAAAAAIAAAAKAP3/AAAAAAEAAAAKAP//AAAAAAEAAAAKAAEAAAAAAAEAAAALAP3/AAAAAAEAAAALAAUAAAAAAAEAAAAMAPz/AAAAAAEAAAANAPz/AAAAAAIAAAAOAPz/AAAAAAEAAAAPAPz/AAAAAAEAAAAPAP3/AAAAAAEAAAAPAP7/AAAAAAEAAAAPAP//AAAAAAIAAAAPAAAAAAAAAAEAAAAPAAEAAAAAAAIAAAAPAAIAAAAAAAIAAAAPAAMAAAAAAAIAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAEAAAAPAAYAAAAAAAIAAAAOAAYAAAAAAAEAAAANAAYAAAAAAAIAAAAMAAYAAAAAAAEAAAAMAAUAAAAAAAEAAAANAAUAAAAAAAIAAAAOAAUAAAAAAAEAAAAOAAQAAAAAAAEAAAANAAQAAAAAAAEAAAAMAAQAAAAAAAIAAAAMAAMAAAAAAAEAAAANAAMAAAAAAAIAAAAOAAMAAAAAAAIAAAAOAAIAAAAAAAEAAAANAAIAAAAAAAIAAAAMAAIAAAAAAAEAAAAMAAEAAAAAAAEAAAANAAEAAAAAAAIAAAAOAAEAAAAAAAIAAAAOAAAAAAAAAAIAAAANAAAAAAAAAAIAAAAMAAAAAAAAAAIAAAAMAP//AAAAAAIAAAANAP//AAAAAAIAAAAOAP//AAAAAAEAAAAOAP7/AAAAAAEAAAANAP7/AAAAAAEAAAAMAP7/AAAAAAEAAAAMAP3/AAAAAAEAAAANAP3/AAAAAAIAAAAOAP3/AAAAAAEAAAAQAAYAAAAAAAIAAAARAAYAAAAAAAEAAAASAAYAAAAAAAEAAAATAAYAAAAAAAEAAAATAAUAAAAAAAEAAAATAAQAAAAAAAIAAAATAAMAAAAAAAIAAAATAAIAAAAAAAEAAAATAAEAAAAAAAEAAAATAAAAAAAAAAEAAAATAP//AAAAAAEAAAATAP7/AAAAAAIAAAATAP3/AAAAAAIAAAATAPz/AAAAAAIAAAASAPz/AAAAAAIAAAARAPz/AAAAAAIAAAAQAPz/AAAAAAEAAAAQAP3/AAAAAAIAAAAQAP7/AAAAAAIAAAAQAP//AAAAAAIAAAAQAAAAAAAAAAEAAAAQAAEAAAAAAAEAAAAQAAIAAAAAAAIAAAAQAAMAAAAAAAIAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAIAAAARAAUAAAAAAAEAAAASAAUAAAAAAAEAAAASAAQAAAAAAAIAAAASAAMAAAAAAAEAAAASAAIAAAAAAAIAAAASAAEAAAAAAAEAAAASAAAAAAAAAAEAAAASAP//AAAAAAIAAAASAP7/AAAAAAIAAAARAP3/AAAAAAIAAAARAP7/AAAAAAEAAAARAP//AAAAAAIAAAARAAAAAAAAAAIAAAARAAEAAAAAAAEAAAARAAIAAAAAAAIAAAARAAMAAAAAAAIAAAARAAQAAAAAAAEAAAASAP3/AAAAAAEAAAD7//v/AAAAAAMAAAD7//z/AAAAAAMAAAD7//3/AAAAAAMAAAD7//7/AAAAAAMAAAD7////AAAAAAMAAAD7/wAAAAAAAAMAAAD7/wEAAAAAAAMAAAD7/wIAAAAAAAMAAAD7/wMAAAAAAAMAAAD7/wQAAAAAAAMAAAD7/wUAAAAAAAMAAAD7/wYAAAAAAAMAAAD7/wcAAAAAAAMAAAD8/wcAAAAAAAMAAAD9/wcAAAAAAAMAAAD+/wcAAAAAAAMAAAD//wcAAAAAAAMAAAAAAAcAAAAAAAMAAAABAAcAAAAAAAMAAAACAAcAAAAAAAMAAAADAAcAAAAAAAMAAAAEAAcAAAAAAAMAAAAFAAcAAAAAAAMAAAAGAAcAAAAAAAMAAAAHAAcAAAAAAAMAAAAIAAcAAAAAAAMAAAAJAAcAAAAAAAMAAAAKAAcAAAAAAAMAAAALAAcAAAAAAAMAAAAMAAcAAAAAAAMAAAANAAcAAAAAAAMAAAAOAAcAAAAAAAMAAAAPAAcAAAAAAAMAAAAQAAcAAAAAAAMAAAARAAcAAAAAAAMAAAASAAcAAAAAAAMAAAATAAcAAAAAAAMAAAAUAAcAAAAAAAMAAAAUAPv/AAAAAAMAAAAUAPz/AAAAAAMAAAAUAP3/AAAAAAMAAAAUAP7/AAAAAAMAAAAUAP//AAAAAAMAAAAUAAAAAAAAAAMAAAAUAAEAAAAAAAMAAAAUAAIAAAAAAAMAAAAUAAMAAAAAAAMAAAAUAAQAAAAAAAMAAAAUAAUAAAAAAAMAAAAUAAYAAAAAAAMAAAD8//v/AAAAAAMAAAD9//v/AAAAAAMAAAD+//v/AAAAAAMAAAD///v/AAAAAAMAAAAAAPv/AAAAAAMAAAABAPv/AAAAAAMAAAACAPv/AAAAAAMAAAADAPv/AAAAAAMAAAAEAPv/AAAAAAMAAAAFAPv/AAAAAAMAAAAGAPv/AAAAAAMAAAAHAPv/AAAAAAMAAAAIAPv/AAAAAAMAAAAJAPv/AAAAAAMAAAAKAPv/AAAAAAMAAAALAPv/AAAAAAMAAAAMAPv/AAAAAAMAAAANAPv/AAAAAAMAAAAOAPv/AAAAAAMAAAAPAPv/AAAAAAMAAAAQAPv/AAAAAAMAAAARAPv/AAAAAAMAAAASAPv/AAAAAAMAAAATAPv/AAAAAAMAAAACAAAAAAAAAAEAAAACAP3/AAAAAAEAAAAKAAAAAAAAAAEAAAA=")
tile_set = ExtResource("2_6sh32")

[node name="GroundLayer" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAAAAAD//wAAAAABAAMAAAAAAAEAAAABAAIAAAD//wEAAAAAAAIAAAD+/wAAAAAAAAMAAAD+////AAAAAAMAAAD/////AAAAAAMAAAAAAP//AAAAAAMAAAD+/wEAAAAAAAMAAAD+/wIAAAAAAAMAAAD9/wIAAAAAAAMAAAD9/wEAAAAAAAMAAAD9/wAAAAAAAAMAAAD9////AAAAAAMAAAAAAAIAAAABAAMAAAABAAIAAAADAAAAAAACAAIAAAADAAAAAAADAAIAAAADAAAAAAAEAAIAAAADAAAAAAAFAAIAAAADAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAADAAIAAAAGAAQAAAADAAIAAAAGAAUAAAADAAIAAAAFAAMAAAACAAEAAAAFAAQAAAACAAEAAAAEAAQAAAACAAEAAAAEAAMAAAACAAEAAAADAAMAAAACAAEAAAADAAQAAAACAAEAAAACAAQAAAACAAEAAAACAAMAAAACAAEAAAABAAMAAAACAAEAAAABAAQAAAACAAEAAAAAAAMAAAABAAEAAAD//wMAAAABAAMAAAD//wQAAAABAAAAAAD//wUAAAABAAAAAAAAAAUAAAACAAEAAAABAAUAAAACAAEAAAACAAUAAAADAAEAAAADAAUAAAABAAIAAAAEAAUAAAACAAIAAAAGAAYAAAADAAMAAAAFAAYAAAABAAIAAAAEAAYAAAAAAAIAAAAFAAUAAAACAAEAAAABAAYAAAACAAEAAAACAAYAAAADAAIAAAD//wYAAAACAAMAAAD+/wYAAAADAAAAAAD9/wYAAAABAAMAAAAAAAYAAAACAAIAAAADAAYAAAAAAAMAAAD//wIAAAAAAAMAAAD+/wMAAAAAAAMAAAD+/wUAAAAAAAMAAAD9/wUAAAAAAAMAAAD9/wQAAAAAAAMAAAD9/wMAAAAAAAMAAAD8/wMAAAAAAAMAAAD8/wQAAAAAAAMAAAD8/wUAAAAAAAMAAAD8/wYAAAAAAAMAAAD8/wIAAAAAAAMAAAD8/wEAAAAAAAMAAAD8/wAAAAAAAAMAAAD8////AAAAAAMAAAD8//7/AAAAAAMAAAD8//3/AAAAAAMAAAD8//z/AAAAAAMAAAD9//z/AAAAAAMAAAD9//3/AAAAAAMAAAD+//3/AAAAAAMAAAD///3/AAAAAAMAAAD///z/AAAAAAMAAAD+//z/AAAAAAMAAAAAAPz/AAAAAAMAAAABAPz/AAAAAAMAAAABAP3/AAAAAAMAAAABAP7/AAAAAAMAAAAAAP7/AAAAAAMAAAAAAP3/AAAAAAMAAAACAPz/AAAAAAMAAAADAPz/AAAAAAMAAAAEAPz/AAAAAAMAAAAEAP3/AAAAAAMAAAADAP3/AAAAAAMAAAACAP3/AAAAAAMAAAACAP7/AAAAAAMAAAACAP//AAAAAAMAAAABAP//AAAAAAMAAAABAAAAAAAAAAAAAAABAAEAAAADAAMAAAACAAEAAAAAAAMAAAADAAEAAAAAAAMAAAADAAAAAAAAAAMAAAADAP//AAAAAAMAAAADAP7/AAAAAAMAAAAEAP7/AAAAAAMAAAAEAP//AAAAAAMAAAAEAAAAAAAAAAMAAAAEAAEAAAAAAAMAAAACAAAAAAAAAAMAAAAFAAEAAAAAAAMAAAAGAAEAAAAAAAMAAAAHAAEAAAAAAAMAAAAIAAEAAAABAAMAAAAJAAEAAAADAAAAAAAJAAIAAAADAAEAAAAJAAMAAAACAAAAAAAIAAIAAAABAAAAAAAHAAIAAAAAAAMAAAAHAAMAAAAAAAMAAAAIAAMAAAABAAAAAAAHAAQAAAAAAAMAAAAHAAUAAAAAAAMAAAAHAAYAAAAAAAMAAAAIAAYAAAAAAAMAAAAIAAUAAAAAAAMAAAAIAAQAAAAAAAIAAAAJAAQAAAACAAIAAAAJAAUAAAAAAAIAAAAJAAYAAAAAAAMAAAAKAAYAAAAAAAMAAAAKAAUAAAABAAIAAAAKAAQAAAACAAEAAAAKAAMAAAABAAEAAAAKAAIAAAACAAIAAAAKAAEAAAADAAAAAAAKAAAAAAAAAAMAAAAKAP//AAAAAAIAAAAKAP7/AAABAAAAAAAJAP7/AAAAAAMAAAAIAP7/AAAAAAMAAAAHAP7/AAAAAAMAAAAGAP7/AAAAAAMAAAAGAP//AAAAAAMAAAAHAP//AAAAAAMAAAAIAP//AAAAAAMAAAAJAP//AAAAAAMAAAAFAPz/AAAAAAMAAAAGAPz/AAAAAAMAAAAHAPz/AAAAAAMAAAAIAPz/AAAAAAMAAAAJAPz/AAAAAAMAAAAKAPz/AAABAAMAAAAKAP3/AAABAAAAAAALAPz/AAADAAAAAAAMAPz/AAADAAAAAAANAPz/AAADAAAAAAAOAPz/AAADAAAAAAAPAPz/AAAAAAAAAAAQAPz/AAAAAAMAAAARAPz/AAAAAAMAAAALAAQAAAADAAEAAAAMAAQAAAABAAIAAAANAAQAAAABAAIAAAAOAAQAAAABAAIAAAAPAAQAAAADAAMAAAAPAAMAAAADAAIAAAAPAAIAAAACAAMAAAAOAAIAAAADAAAAAAANAAIAAAADAAAAAAAMAAIAAAADAAAAAAAQAAIAAAABAAIAAAARAAIAAAADAAMAAAARAAEAAAADAAIAAAARAAAAAAADAAIAAAARAP//AAAAAAAAAAAQAP//AAADAAAAAAAPAP//AAAAAAEAAAAPAAAAAAABAAAAAAAPAAEAAAABAAAAAAAQAAAAAAACAAEAAAAQAAEAAAACAAEAAAALAAIAAAACAAAAAAALAAEAAAACAAMAAAALAAMAAAACAAEAAAAMAAMAAAACAAEAAAANAAMAAAACAAEAAAAOAAMAAAACAAEAAAALAAUAAAADAAMAAAALAP3/AAACAAEAAAALAP7/AAACAAEAAAALAP//AAACAAIAAAALAAAAAAABAAAAAAAMAAAAAAACAAEAAAANAAAAAAACAAEAAAAOAAAAAAADAAIAAAAOAP//AAADAAEAAAAOAP7/AAACAAEAAAAOAP3/AAACAAEAAAANAP3/AAACAAEAAAAMAP3/AAACAAEAAAAMAP7/AAACAAEAAAAMAP//AAACAAEAAAANAP//AAACAAEAAAANAP7/AAACAAEAAAAPAP3/AAACAAAAAAAPAP7/AAADAAEAAAAQAP7/AAADAAMAAAAQAP3/AAAAAAAAAAAOAAEAAAADAAMAAAANAAEAAAABAAIAAAAMAAEAAAABAAIAAAAMAAUAAAAAAAMAAAAMAAYAAAAAAAMAAAALAAYAAAAAAAMAAAANAAYAAAAAAAMAAAAOAAYAAAAAAAMAAAAPAAYAAAAAAAMAAAAPAAUAAAAAAAMAAAAQAAUAAAAAAAMAAAARAAUAAAAAAAMAAAASAAUAAAAAAAMAAAATAAUAAAAAAAMAAAATAAYAAAAAAAMAAAASAAYAAAAAAAMAAAARAAYAAAAAAAMAAAAQAAYAAAAAAAMAAAAOAAUAAAAAAAMAAAANAAUAAAAAAAMAAAAQAAQAAAAAAAMAAAAQAAMAAAAAAAMAAAARAAMAAAAAAAMAAAARAAQAAAAAAAMAAAASAAQAAAAAAAMAAAASAAMAAAAAAAMAAAATAAMAAAAAAAMAAAATAAQAAAAAAAMAAAATAAIAAAAAAAMAAAATAAEAAAAAAAMAAAATAAAAAAAAAAMAAAATAP//AAAAAAMAAAATAP7/AAAAAAMAAAATAP3/AAAAAAMAAAATAPz/AAAAAAMAAAASAPz/AAAAAAMAAAASAP3/AAAAAAMAAAARAP3/AAAAAAMAAAARAP7/AAAAAAMAAAASAP//AAAAAAMAAAASAAAAAAAAAAMAAAASAAEAAAAAAAMAAAASAAIAAAAAAAMAAAASAP7/AAAAAAMAAAA=")
tile_set = ExtResource("3_2r1tl")

[node name="RockWalls" type="TileMapLayer" parent="TileMapLayers"]
y_sort_enabled = true
position = Vector2(75, 75)
tile_map_data = PackedByteArray("AAD7//v/AAADAAEAAAD7//z/AAADAAIAAAD7//3/AAADAAIAAAD7//7/AAADAAIAAAD7////AAADAAIAAAD7/wAAAAADAAIAAAD7/wEAAAADAAIAAAD7/wIAAAADAAIAAAD7/wMAAAADAAIAAAD7/wQAAAADAAIAAAD7/wUAAAADAAIAAAD7/wYAAAACAAAAAAD8/wYAAAADAAAAAAD9/wYAAAADAAAAAAD+/wYAAAADAAAAAAD//wYAAAADAAAAAAAAAAYAAAADAAAAAAABAAYAAAADAAAAAAACAAYAAAADAAAAAAADAAYAAAADAAAAAAAEAAYAAAADAAAAAAAFAAYAAAADAAAAAAAGAAYAAAADAAAAAAAHAAYAAAADAAAAAAAIAAYAAAADAAAAAAAJAAYAAAADAAAAAAAKAAYAAAADAAAAAAALAAYAAAADAAAAAAAMAAYAAAADAAAAAAANAAYAAAADAAAAAAAOAAYAAAADAAAAAAAPAAYAAAADAAAAAAAQAAYAAAADAAAAAAARAAYAAAADAAAAAAASAAYAAAADAAAAAAATAAYAAAABAAEAAAATAAUAAAABAAAAAAATAAQAAAABAAAAAAATAAMAAAABAAAAAAATAAIAAAABAAAAAAATAAEAAAABAAAAAAATAAAAAAABAAAAAAATAP//AAABAAAAAAATAP7/AAABAAAAAAATAP3/AAABAAAAAAATAPz/AAABAAAAAAATAPv/AAACAAIAAAASAPv/AAABAAIAAAARAPv/AAABAAIAAAAQAPv/AAABAAIAAAAPAPv/AAABAAIAAAAOAPv/AAABAAIAAAANAPv/AAABAAIAAAAMAPv/AAABAAIAAAALAPv/AAABAAIAAAAKAPv/AAABAAIAAAAJAPv/AAABAAIAAAAIAPv/AAABAAIAAAAHAPv/AAABAAIAAAAGAPv/AAABAAIAAAAFAPv/AAABAAIAAAAEAPv/AAABAAIAAAADAPv/AAABAAIAAAACAPv/AAABAAIAAAABAPv/AAABAAIAAAAAAPv/AAABAAIAAAD///v/AAABAAIAAAD+//v/AAABAAIAAAD9//v/AAABAAIAAAD8//v/AAABAAIAAAD7//r/AAADAAAAAAD8//r/AAADAAAAAAD9//r/AAADAAAAAAD+//r/AAADAAAAAAD///r/AAADAAAAAAAAAPr/AAADAAAAAAABAPr/AAADAAAAAAACAPr/AAADAAAAAAADAPr/AAADAAAAAAAEAPr/AAADAAAAAAAFAPr/AAADAAAAAAAGAPr/AAADAAAAAAAHAPr/AAADAAAAAAAIAPr/AAADAAAAAAAJAPr/AAADAAAAAAAKAPr/AAADAAAAAAALAPr/AAADAAAAAAAMAPr/AAADAAAAAAANAPr/AAADAAAAAAAOAPr/AAADAAAAAAAPAPr/AAADAAAAAAAQAPr/AAADAAAAAAARAPr/AAADAAAAAAASAPr/AAADAAAAAAATAPr/AAADAAAAAAAUAPr/AAAAAAAAAAAUAPv/AAADAAIAAAAUAPz/AAADAAIAAAAUAP3/AAADAAIAAAAUAP7/AAADAAIAAAAUAP//AAADAAIAAAAUAAAAAAADAAIAAAAUAAEAAAADAAIAAAAUAAIAAAADAAIAAAAUAAMAAAADAAIAAAAUAAQAAAADAAIAAAAUAAUAAAADAAIAAAAUAAYAAAADAAIAAAAUAAcAAAADAAMAAAATAAcAAAABAAIAAAASAAcAAAABAAIAAAARAAcAAAABAAIAAAAQAAcAAAABAAIAAAAPAAcAAAABAAIAAAAOAAcAAAABAAIAAAANAAcAAAABAAIAAAAMAAcAAAABAAIAAAALAAcAAAABAAIAAAAKAAcAAAABAAIAAAAJAAcAAAABAAIAAAAIAAcAAAABAAIAAAAHAAcAAAABAAIAAAAGAAcAAAABAAIAAAAFAAcAAAABAAIAAAAEAAcAAAABAAIAAAADAAcAAAABAAIAAAACAAcAAAABAAIAAAABAAcAAAABAAIAAAAAAAcAAAABAAIAAAD//wcAAAABAAIAAAD+/wcAAAABAAIAAAD9/wcAAAABAAIAAAD8/wcAAAABAAIAAAD7/wcAAAABAAIAAAD6/wcAAAAAAAIAAAD6/wYAAAABAAAAAAD6/wUAAAABAAAAAAD6/wQAAAABAAAAAAD6/wMAAAABAAAAAAD6/wIAAAABAAAAAAD6/wEAAAABAAAAAAD6/wAAAAABAAAAAAD6////AAABAAAAAAD6//7/AAABAAAAAAD6//3/AAABAAAAAAD6//z/AAABAAAAAAD6//v/AAABAAAAAAD6//r/AAABAAMAAAD9/wMAAAABAAMAAAD+/wMAAAAAAAAAAAD+/wQAAAADAAMAAAD9/wQAAAAAAAIAAAD//wQAAAAAAAIAAAD8//7/AAAAAAIAAAAEAAAAAAAAAAIAAAAAAAQAAAADAAMAAAD///7/AAADAAMAAAAJAAAAAAADAAMAAAAJAP3/AAADAAMAAAAJAPz/AAAAAAAAAAAIAPz/AAADAAAAAAAHAPz/AAADAAAAAAAGAPz/AAADAAAAAAAFAPz/AAADAAAAAAAEAPz/AAABAAMAAAD8//3/AAABAAMAAAD//wMAAAABAAMAAAD///3/AAAAAAAAAAAJAP//AAAAAAAAAAAFAP3/AAADAAEAAAAFAP//AAACAAAAAAAAAAMAAAAAAAAAAAD9//3/AAADAAAAAAD+//3/AAADAAAAAAD9//7/AAABAAIAAAD+//7/AAABAAIAAAAGAP3/AAABAAIAAAAHAP3/AAABAAIAAAAIAP3/AAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAP//AAADAAAAAAAHAP//AAADAAAAAAAIAP//AAADAAAAAAAFAP7/AAADAAIAAAAEAP3/AAABAAAAAAAEAP7/AAABAAAAAAAEAP//AAABAAAAAAA=")
tile_set = ExtResource("4_2r1tl")

[node name="AOEs" type="Node" parent="."]

[node name="LavaAOENavigationRegion" type="NavigationRegion2D" parent="AOEs"]
navigation_polygon = SubResource("NavigationPolygon_5ntmo")
navigation_layers = 2

[node name="LavaAOE" parent="AOEs/LavaAOENavigationRegion" instance=ExtResource("3_ejswk")]
position = Vector2(501, -439)
collision_layer = 8

[node name="Enemies" type="Node" parent="."]

[node name="LavaAnt" parent="Enemies" node_paths=PackedStringArray("target") instance=ExtResource("4_bbk5w")]
position = Vector2(1035, -234)
target = NodePath("../../Hero")

[node name="LavaAnt2" parent="Enemies" node_paths=PackedStringArray("target") instance=ExtResource("4_bbk5w")]
position = Vector2(-138, -401)
target = NodePath("../../Hero")

[node name="LavaAnt3" parent="Enemies" node_paths=PackedStringArray("target") instance=ExtResource("4_bbk5w")]
position = Vector2(605, 303)
target = NodePath("../../Hero")
scaling = 0.5

[node name="LavaAnt4" parent="Enemies" node_paths=PackedStringArray("target") instance=ExtResource("4_bbk5w")]
position = Vector2(457, 360)
target = NodePath("../../Hero")
scaling = 0.5

[node name="LavaAnt5" parent="Enemies" node_paths=PackedStringArray("target") instance=ExtResource("4_bbk5w")]
position = Vector2(559, 460)
target = NodePath("../../Hero")
scaling = 0.5

[node name="LavaAnt6" parent="Enemies" node_paths=PackedStringArray("target") instance=ExtResource("4_bbk5w")]
position = Vector2(722, 409)
target = NodePath("../../Hero")
scaling = 0.75

[node name="SplittingEnemy" parent="Enemies" instance=ExtResource("5_1seuy")]

[node name="LavaAnt" parent="Enemies/SplittingEnemy" node_paths=PackedStringArray("target") instance=ExtResource("4_bbk5w")]
position = Vector2(500, -500)
target = NodePath("../../../Hero")
scaling = 2.0

[node name="AcidSlug" parent="Enemies" instance=ExtResource("10_5ntmo")]
position = Vector2(-426, -6)
scaling = 0.75

[node name="AcidSlug2" parent="Enemies" instance=ExtResource("10_5ntmo")]
position = Vector2(-520, 100)

[node name="AcidSlug3" parent="Enemies" instance=ExtResource("10_5ntmo")]
position = Vector2(-400, 188)
scaling = 0.5

[node name="Crystal" parent="." instance=ExtResource("9_5ntmo")]
position = Vector2(384, 514)

[node name="Hero" parent="." instance=ExtResource("5_conm7")]
y_sort_enabled = true
position = Vector2(-42, 96)
